Kafka added