@@ -5,26 +5,38 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.16</version>
+		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.goodforallcode</groupId>
 	<artifactId>jobExtractor</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>jobExtractor</name>
 	<description>Extracts attributes from job postings and uses this information to filter jobs</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>22</java.version>
+		<selenium.version>4.16.0</selenium.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.1.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
 		</dependency>
+
+		<!-- json support -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
@@ -36,59 +48,43 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.12.14</version>
 		</dependency>
+		<!--spring boot-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
-			<version>4.13.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-chrome-driver</artifactId>
-			<version>4.13.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!--selenium-->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-firefox-driver</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-api</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-support</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -99,111 +95,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.11.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-api</artifactId>
-			<version>4.1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-firefox-driver</artifactId>
-			<version>4.1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-support</artifactId>
-			<version>4.1.4</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.graalvm.polyglot/polyglot -->
-		<dependency> <!-- We also move from graal-sdk => polyglot -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>polyglot</artifactId>
-			<version>23.1.2</version>
-		</dependency>
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.js</groupId>
-			<artifactId>js-language</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.js</groupId>
-			<artifactId>js-isolate</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.js</groupId>
-			<artifactId>js-launcher</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.js</groupId>
-			<artifactId>js-scriptengine</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.python</groupId>
-			<artifactId>python-language</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/black.ninia/jep -->
-		<dependency>
-			<groupId>black.ninia</groupId>
-			<artifactId>jep</artifactId>
-			<version>4.2.0</version>
-		</dependency>
 
-		<dependency> <!-- you can also depend on org.graalvm.polyglot:languages for all languages -->
-			<groupId>org.graalvm.python</groupId>
-			<artifactId>python-resources</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- all tools we include in Oracle GraalVM -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>tools</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- all tools we include in Oracle GraalVM -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>js</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- all tools we include in Oracle GraalVM -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>polyglot</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-
-		<dependency> <!-- all tools we include in Oracle GraalVM -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>python</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
-		<dependency> <!-- all tools we include in Oracle GraalVM -->
-			<groupId>org.graalvm.polyglot</groupId>
-			<artifactId>languages</artifactId>
-			<version>23.1.2</version>
-			<type>pom</type>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -220,7 +112,27 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<release>22</release>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.goodforallcode.jobExtractor.JobExtractorApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
